Own session redis
- removed big mode artifacts
- removed django_session_redis
- Enforce newly created settings.py when invalid options are set:
  * OPENSLIDES_USER_DATA_DIR
  * SESSION_ENGINE
- Overwrites the secret key during development to "development"

--- a/server/docker/Dockerfile
+++ b/server/docker/Dockerfile
@@ -51,8 +51,7 @@ RUN apt-get install --no-install-recommends -y \
 RUN rm -rf /var/lib/apt/lists/*
 
 COPY requirements /app/requirements
-RUN pip install -r requirements/production.txt -r requirements/big_mode.txt \
-    -r requirements/saml.txt && \
+RUN pip install -r requirements/production.txt -r requirements/saml.txt && \
     rm -rf /root/.cache/pip
 
 # SAML
