Docker: Rename proxy-related variables
HAProxy was replaced by Caddy, so obviously variables should not longer
carry HAPROXY in their names to avoid confusion.

To hopefully make future changes less likely to break configurations,
we'll keep variable and image names generic (proxy instead of caddy).

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -45,7 +45,7 @@ services:
   redis:
     image: redis:latest
 
-  caddy:
+  proxy:
     image: caddy:2.3.0-alpine
     volumes:
       - ../caddy/Caddyfile.dev:/etc/caddy/Caddyfile
