fix Caddy dev setup

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -46,7 +46,7 @@ services:
     image: redis:latest
 
   proxy:
-    image: caddy:2.3.0-alpine
+    image: os3-proxy-dev
     volumes:
       - ../caddy/Caddyfile.dev:/etc/caddy/Caddyfile
     depends_on:
