add optional https for caddy

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,16 +1,17 @@
-:8000
+import endpoint
 
-reverse_proxy /system/* autoupdate:8002 {
-    flush_interval -1
+    reverse_proxy /system/* autoupdate:8002 {
+        flush_interval -1
+    }
+
+    @server {
+        path /apps/*
+        path /rest/*
+        path /server-version.txt
+    }
+    reverse_proxy @server server:8000
+
+    reverse_proxy /media/* media:8000
+
+    reverse_proxy client:4200
 }
-
-@server {
-    path /apps/*
-    path /rest/*
-    path /server-version.txt
-}
-reverse_proxy @server server:8000
-
-reverse_proxy /media/* media:8000
-
-reverse_proxy client:4200
