--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -97,8 +97,10 @@ services:
     image: openslides-manage-dev
     depends_on:
     - auth
-    - datastore
+    - datastore-writer
     env_file: services.env
+    ports:
+    - "8001:8001"
   message-bus:
     image: redis:latest
   haproxy:
