--- a/.gitmodules
+++ b/.gitmodules
@@ -24,6 +24,7 @@
 [submodule "openslides-permission-service"]
 	path = openslides-permission-service
 	url = git@github.com:OpenSlides/openslides-permission-service.git
+	branch = master
 [submodule "openslides-manage-service"]
 	path = openslides-manage-service
 	url = git@github.com:OpenSlides/openslides-manage-service.git
