Make css_class required

--- a/docs/models.yml
+++ b/docs/models.yml
@@ -1519,6 +1519,7 @@ motion_state:
     - lightblue
     - yellow
     default: lightblue
+    required: true
   restrictions:
     type: string[]
     items:
