--- a/client/package.json
+++ b/client/package.json
@@ -66,9 +66,9 @@
         "lz4js": "^0.2.0",
         "material-icon-font": "git+https://github.com/petergng/materialIconFont.git",
         "moment": "^2.27.0",
-        "ng-particles": "^2.1.11",
+        "ng-particles": "^2.6.0",
         "ng2-charts": "^2.4.0",
-        "ng2-pdf-viewer": "6.3.2",
+        "ng2-pdf-viewer": "^6.4.1",
         "ngx-device-detector": "^2.0.0",
         "ngx-file-drop": "^9.0.1",
         "ngx-mat-select-search": "^3.0.3",
@@ -80,7 +80,7 @@
         "rxjs": "^6.6.2",
         "tinymce": "5.6.0",
         "tslib": "^1.10.0",
-        "tsparticles": "^1.18.11",
+        "tsparticles": "^1.23.0",
         "video.js": "^7.8.4",
         "zone.js": "~0.10.2"
     },
