--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -66,7 +66,7 @@ jobs:
         run: npm ci
 
       - name: list installed client dependencies
-        run: npm list
+        run: npm list || true
 
   install-fresh-client-dependencies:
     runs-on: ubuntu-latest
@@ -91,7 +91,7 @@ jobs:
         run: npm install --no-package-lock
 
       - name: list installed client dependencies
-        run: npm list
+        run: npm list || true
 
   check-client-code:
     needs: install-client-dependencies
