user_token, single votes table, entitled_users server changes
server changes finished, tests, cleanup

Add entitled user table

Fix formatting

Finish entitled users table & implement new percent base

Fix typing

Fixed remarks & errors

Fix new precent base representation

Update autoupdate service

Remove unneeded prettier entry

Remove unneeded css

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -10,7 +10,7 @@ services:
 
   server:
     image: os3-server-dev
-    user: $UID:$GID
+    user: $USER_ID:$GROUP_ID
     build:
       context: ../server
       dockerfile: docker/Dockerfile.dev
