--- a/docker/services.env
+++ b/docker/services.env
@@ -12,6 +12,9 @@ ACTION_PORT=9002
 PRESENTER_HOST=backend
 PRESENTER_PORT=9003
 
+AUTOUPDATE_HOST=autoupdate
+AUTOUPDATE_PORT=9012
+
 PERMISSION_HOST=permission
 PERMISSION_PORT=9005
 
@@ -24,3 +27,6 @@ MEDIA_HOST=media
 MEDIA_PORT=9006
 MEDIA_DATABASE_HOST=postgres
 MEDIA_DATABASE_NAME=openslides
+
+MANAGE_HOST=manage
+MANAGE_PORT=9008
