--- a/proxy/Caddyfile
+++ b/proxy/Caddyfile
@@ -1,12 +1,12 @@
 import endpoint
 
-    reverse_proxy /system/action/* backend:9002
-    reverse_proxy /system/presenter/* backend:9003
-    reverse_proxy /system/autoupdate/* autoupdate:9012 {
+    reverse_proxy /system/action* backend:9002
+    reverse_proxy /system/presenter* backend:9003
+    reverse_proxy /system/autoupdate* autoupdate:9012 {
         flush_interval -1
     }
-    reverse_proxy /system/auth/* auth:9004
-    reverse_proxy /system/media/* media:9006
+    reverse_proxy /system/auth* auth:9004
+    reverse_proxy /system/media* media:9006
 
     reverse_proxy client:9001
 
