--- a/docker/.env
+++ b/docker/.env
@@ -10,9 +10,40 @@
 
 # General
 # -------
+
+# The domain your OpenSlides installation in reachable. E.g. example.com or
+# 127.0.0.1 for a local deployment. This domain is used when generating links
+# in emails and so on, so it should be the public facing domain. The default
+# is 127.0.0.1
+# If you do not have any port-changing proxies, this setting should be kept in
+# sync with the EXTERNAL_*_PORTS below
 INSTANCE_DOMAIN=
-PROJECT_STACK_NAME=
+
+# The schema (http or https) to use for generating public links. The default
+# is https.
+INSTANCE_URL_SCHEME=
+
+# The ports the setup binds to to listen for http/https requests. To not bind
+# to http or https, leave the port empty. Behavior of port-combinations:
+# - If both ports are set, the server listens to https. Additionally, a http to
+# https redirect is activated on the http port.
+# - If no ports are set, the https port defaults to 443.
+# - If exactly one port is set, the server listens to the given port.
+# If the https port is set, there must be a ssl certificate. See the README
+# for more information.
 EXTERNAL_HTTP_PORT=
+EXTERNAL_HTTPS_PORT=
+
+# A list of hosts, that are allowed to accept. If there is a not accepted host,
+# a 421 response will be returned.
+# The default is an empty list, so all hosts are accepted.
+# Example with two hosts: ALLOWED_HOSTS="127.0.0.1:443 example.com"
+ALLOWED_HOSTS=
+
+# The name for the docker stack used.
+PROJECT_STACK_NAME=
+
+# The default registry. Defaults to "openslides".
 DEFAULT_DOCKER_REGISTRY=
 
 # Docker Images
