--- a/docker/.env
+++ b/docker/.env
@@ -22,6 +22,10 @@ DOCKER_OPENSLIDES_BACKEND_TAG=
 DOCKER_OPENSLIDES_FRONTEND_NAME=
 DOCKER_OPENSLIDES_FRONTEND_TAG=
 
+# Configuration
+# -------------
+ENABLE_ELECTRONIC_VOTING=
+
 # Service Replication
 # -------------------
 # TODO!!
