Setting for the mediafile database tablename

--- a/docker/.env
+++ b/docker/.env
@@ -103,6 +103,12 @@ DATABASE_HOST=
 DATABASE_PASSWORD=
 DATABASE_PORT=
 DATABASE_USER=
+MEDIAFILE_DATABASE_NAME=
+MEDIAFILE_DATABASE_USER=
+MEDIAFILE_DATABASE_PASSWORD=
+MEDIAFILE_DATABASE_HOST=
+MEDIAFILE_DATABASE_PORT=
+MEDIAFILE_DATABASE_TABLENAME=
 EMAIL_HOST=
 EMAIL_HOST_PASSWORD=
 EMAIL_HOST_USER=
